# Sentinel

./: Dockerfile  README.md  agent.py  main.py  pyproject.toml  requirements.txt
tools/: __init__.py  conversation.py  conversation_history.py  summarizer.py  web_crawling.py  web_search.py
utils/: __init__.py  agent_functions.py
